# rustv32i

./: .gitignore  Cargo.toml  README.md  shell.nix
.github/workflows/: ci.yml
rvdc/: CHANGELOG.md  Cargo.toml  README.md
rvdc/src/: lib.rs
src/: elf.rs  emu.rs  inst.rs  lib.rs  main.rs
test/: Makefile  bye.c  hello.c  init.c  init1.rs
tests/: check.rs  helper.S
tests/check/: arith.s  branch.S  int_comp.S  mem.S  smoke.S  smoke.s  stack.S  zaamo.S  zalrsc.S
