[workspace]
members = [".", "rvdc"]

[package]
name = "rustv32i"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = "0.6.12"
libc = "0.2.170"
owo-colors = "4.2.0"
rvdc = { path = "./rvdc" }

[profile.dev]
opt-level = 1

[profile.release]
debug = 1

[dev-dependencies]
tempfile = "3.18.0"

[lints.clippy]
type_complexity = "allow"
if_same_then_else = "allow"
