[package]
name = "rvdc"
version = "0.1.0"
description = "RISC-V instruction decoder"
repository = "https://github.com/Noratrieb/rustv32i"
edition = "2024"
keywords = ["risc-v", "riscv", "decoder", "instruction", "parser"]
categories = ["parser-implementations"]
license = "MIT OR Apache-2.0"

[dependencies]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(slow_tests)'] }
